# btagent

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  cli.py  pyproject.toml
factors/builtin/: factors.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: BacktestPage.tsx  ChatPage.tsx  FactorsPage.tsx  HistoryPage.tsx  PortfolioPage.tsx  SettingsPage.tsx  StrategiesPage.tsx
frontend/src/utils/: chatStore.ts
src/: config.py  exceptions.py  llm_client.py  llm_factory.py  logging.py
src/agent/: graph.py  state.py
src/agent/prompts/: system.md
src/api/: app.py  dependencies.py  middleware.py  schemas.py
src/api/routes/: backtest.py  calendar.py  chat.py  chat_sse.py  data.py  factors.py  portfolio.py  selection.py  settings.py  strategies.py
src/core/: backtest_engine.py  factor_store.py  models.py  param_optimizer.py  position_manager.py  session_store.py  settings_store.py  stock_selector.py  stoploss_engine.py  strategy_compiler.py  trading_calendar.py
src/tools/: __init__.py  backtest_tools.py  calendar_tools.py  comparison_tools.py  data_tools.py  factor_tools.py  optimize_tools.py  position_tools.py  selection_tools.py  stoploss_tools.py  storage_tools.py  strategy_tools.py
tests/: conftest.py  test_backtest_engine.py  test_comparison_tools.py  test_factor_store.py  test_param_optimizer.py  test_position_manager.py  test_session_store.py  test_stock_selector.py  test_stoploss_engine.py  test_strategy_compiler.py  test_tools.py  test_trading_calendar.py
(+3 files in other folders)
